[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
blake3 = "1.3.0"
rust-argon2 = "1.0.0"
aead = "0.4.3"
# base64ct is insecure and does not check padding
# base64ct = {version = "1.0.1", features = ["alloc", "std"]}
ct-codecs = "1.1.1"
ring = "0.17.0-alpha.11"
hex = "0.4.3"
dotenv = "0.15.0" 
dashmap = "5.0.0"
